--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    font-family: "DM Serif Text", serif;
 }
 .top-area{
     background-image: url("/img/header-bg.png");
@@ -65,7 +66,7 @@ body{
 }
 
 .leave-program{
-    width: 600px;
+    width: 60%;
     background-color: rgb(218, 70, 44);
     margin: 0 auto;
     display: block;
